--- a/main.css
+++ b/main.css
@@ -36,10 +36,16 @@
 	border: red solid 1px;
 	border-radius: 1px;
 }
+.bottom{
+	display: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 8vh;
+}
 .bot{
 	display: flex;
 	flex-direction: row;
-	height: 8vh;
+	height: 100%;
 	width:100%;
 }
 .icon{
