--- a/main.css
+++ b/main.css
@@ -38,11 +38,10 @@
 }
 .bottom{
 	position: absolute;
-	bottom: 0;
-	left:0;
-	background:yellow;
+	bottom: 0px;
 	width: 100%;
 	height: 8vh;
+	background:yellow;
 }
 .bot{
 	display: flex;
