--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@
 	/*height: 100vh;*/
 	width:100%;
 	/*background: yellow;*/
+	margin: 0 auto;
 }
 .top{
 	height: 7vh;
@@ -15,8 +16,7 @@
 	border-bottom: black 1px solid;
 }
 .mid{
-	
-	height: 85vh;
+	height: 94vh;
 	width:100%;
 	border-bottom: black 1px solid;
 	background: white;
@@ -36,16 +36,12 @@
 	border: red solid 1px;
 	border-radius: 1px;
 }
-.bottom{
-	position: absolute;
-	bottom: 0px;
-	width: 100%;
-	height: 8vh;
-}
 .bot{
+	position: fixed;
+	bottom: 0;
 	display: flex;
 	flex-direction: row;
-	height: 100%;
+	height:8vh;
 	width:100%;
 	background: blue;
 
