--- a/main.css
+++ b/main.css
@@ -14,6 +14,39 @@
 	height: 7vh;
 	width: 100%;
 	border-bottom: black 1px solid;
+	display: flex;
+	background: yellow;
+	align-items: center;
+	justify-content: space-around;
+
+	/*flex-direction: column;*/
+}
+.top .t-icon{
+	height: 5.5vh;
+	width: 20%;
+	background:gray;
+}
+.top .t-input{
+	display: flex;
+	height: 5vh;
+	width: 75%;
+	/*background: red;*/
+}
+.top .t-input input{
+	height: 100%;
+	width: 100%;
+	border: none;
+	font-size: 18px;
+	padding: 10px;
+	border-top-left-radius:7px;
+	border-bottom-left-radius: 7px;
+}
+.top .t-input .t-search-btn{
+	height: 100%;
+	width: 15%;
+	border: none;
+	border-top-right-radius: 7px;
+	border-bottom-right-radius: 7px;
 }
 .mid{
 	height: 94vh;
@@ -28,13 +61,14 @@
 	margin: 10px 0;
 	height: 45%;
 	width: 100%;
-	border:black solid 1px;
+	border:black solid 0px;
 }
 .bars{
 	height: 100%;
 	width:45%;
-	border: red solid 1px;
+	border: red solid 0px;
 	border-radius: 1px;
+	background: rgb(240,240,240);
 }
 .bot{
 	position: fixed;
@@ -43,13 +77,16 @@
 	flex-direction: row;
 	height:8vh;
 	width:100%;
-	background: orange;
+	background: white;
 
 }
 .icon{
 	width:70%;
 	height: 60%;
 	background: brown;
+}
+.icon:hover{
+	background: rgb();
 }
 .bot div{
 	width: 20%;
