--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 	margin: 0 auto;
 }
 .top{
-	height: 7vh;
+	height: 64px;
 	width: 100%;
 	border-bottom: black 1px solid;
 	display: flex;
@@ -22,13 +22,13 @@
 	/*flex-direction: column;*/
 }
 .top .t-icon{
-	height: 5.5vh;
+	height: 50px;
 	width: 20%;
 	background:gray;
 }
 .top .t-input{
 	display: flex;
-	height: 5vh;
+	height: 40px;
 	width: 75%;
 	/*background: red;*/
 }
@@ -75,7 +75,7 @@
 	bottom: 0;
 	display: flex;
 	flex-direction: row;
-	height:8vh;
+	height: 67px;
 	width:100%;
 	background: white;
 
