--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
 	width: 100%;
 	border-bottom: black 1px solid;
 	display: flex;
-	background: yellow;
+	background: pink;
 	align-items: center;
 	justify-content: space-around;
 
